# aos-playground

./: .gitignore  README.md  README.org
code/: .gitignore
code/boot/uefi/: create-disk.sh  (+3 more)
code/c-async/: threaded.c
code/cpp-threads/: 02-thread.cpp  03-thread.cpp  06-producerconsumer-test.cpp  10-threadpool-test.cpp
code/lang-rust/: .gitignore  LICENSE  aliases.sh  makefile  package.json  readme.md  renode-script.sh
code/lang-rust/rled-hal/: Cargo.toml  README.md  makefile
code/lang-rust/rled-hal/src/: main.rs
code/os-linux/: .gitignore  Dockerfile  makefile
code/proc-elf/: makefile  riscv.mk
code/proc-ipc/: 1-fork.c  10-mq-writer.c  2-exec.c  5-signal-do-nothing.c  5-signal-sender.c  6-signal-timewait.c  7-signal-mask.c  9-fifo-writer.c
code/proc-sched/: simulator-event-scheduling-solution.c  simulator-event-scheduling.c
code/proc-vm/: .gitignore
code/th-c-async/: makefile  select.c  sequential.c  state.c  uv.c
code/th-cpp/: 01-thread.cpp  05-mutex.cpp  11-parallel-vs-sequential-fibonacci.cpp  active_object.cpp  active_object.h  reactor.h
code/vm/: makefile  va.c
code/vm-inspect/: demo-script.md  readme.md
containers/buildroot-toolkit/: Dockerfile  makefile  readme.md
containers/riscv-env/: Dockerfile  makefile
containers/riscv-toolkit/: makefile
docker/buildroot-toolkit/: .gitignore  Dockerfile  makefile
docker/linux-toolkit/: Dockerfile  makefile
exe-code/1-ipc/: 10-mq-reader.c  11-shared-memory-compute.c  11-shared-memory.c  12-sem-sm-compute.c  12-sem-sm.c  3-wait.c  4-zombie.c  5-signal-receiver.c  8-pipe.c  9-fifo-reader.c
(+451 files in other folders)
