[package]
authors = ["Vittorio Zaccaria"]
edition = "2018"
readme = "README.md"
name = "rled"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"



# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,

# The following are additional examples

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f407"]

[dependencies.stm32f4xx-hal]
# version = "0.13.1"
features = ["rt", "stm32f407"] # replace the model of your microcontroller here


# this lets you use `cargo fix`!
[[bin]]
name = "rled"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
